subHeader creation + contact fixes
Fix horizontal scroll Gmap
Fix font size + padding on address inside contact form

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -20,6 +20,7 @@
   --grey-3: #b1b1b1;
   --blue-1: #e7efff;
   --shadow-light: -7.8px 7.8px 32px 0 rgba(0, 0, 0, 0.09);
+  --overlay-header:  rgba(0, 0, 0, 0.4);
   
 }
 
