--- a/client/src/components/Gmap/style.scss
+++ b/client/src/components/Gmap/style.scss
@@ -20,7 +20,7 @@
 }
 
 .map{
-  height: 50vh;
-  width: 100vw;
+  height: 70vh;
+  width: 100%;
   margin: auto;
 }
